# Changelog Galantis Kernel

1.  Disabled GENTLE_FAIR_SLEEPERS.
2.  Reduced swappiness from 60 to 40.
3.  Optimized SLUB.
4.  Asynchronous I/O latency to a solid-state disk greatly increased.
5.  NOATIME and NODIRATIME by default.
6.  Enabled aggressive multi-core power savings.
7.  Dynamic readahead support.
8.  Add Sound Control 3.4.
9.  Added governors (-Ondemandplus -lionheart -wheatley -intelliactive -intellidemand).
10. Enabled ARCH_POWER.
-------------------------------      GALANTIS -R1      -------------------------------
11. Enable Ondemandplus from Galantis r1 (initial for GALANTIS -R2).
12. Proper gcc 4.8 fix.
13. Implement intelliplug 3.8.
14. block: add sio, zen i/o scheduler.
15. Added Governor (Nightmare).