@@ -82,6 +82,19 @@ config IOSCHED_ZEN
             FCFS, dispatches are back-inserted, deadlines ensure fairness.
             Should work best with devices where there is no travel delay.
 
+config IOSCHED_TRIPNDROID
+	tristate "Tripndroid"
+	default y
+	---help---
+	  The Trip N Droid scheduler
+
+config IOSCHED_FIFO
+	tristate "FIFO I/O scheduler"
+	default y
+	---help---
+	  Fifo is similar to no-op I/O scheduler and it's a minimal scheduler 
+	  that does basic merging and sorting.
+
 choice
 	prompt "Default I/O scheduler"
 	default DEFAULT_CFQ
@@ -111,6 +124,12 @@ choice
         config DEFAULT_ZEN
                 bool "ZEN" if IOSCHED_ZEN=y
 
+	config DEFAULT_TRIPNDROID
+		bool "TRIPNDROID" if IOSCHED_TRIPNDROID=y
+
+	config DEFAULT_FIFO
+ 		bool "FIFO" if IOSCHED_FIFO=y
+
 	config DEFAULT_NOOP
 		bool "No-op"
 
@@ -123,6 +142,8 @@ config DEFAULT_IOSCHED
 	default "cfq" if DEFAULT_CFQ
         default "sio" if DEFAULT_SIO
         default "zen" if DEFAULT_ZEN
+	default "tripndroid" if DEFAULT_TRIPNDROID
+	default "fifo" if DEFAULT_FIFO
 	default "noop" if DEFAULT_NOOP
 
 endmenu
