@@ -16,3 +16,4 @@
 13. Implement intelliplug 3.8.
 14. block: add sio, zen i/o scheduler.
 15. Added Governor (Nightmare).
+16. block: added TripNdroid & Fifo io schedulers.
